# 3rd_project_for_ML

./: .gitignore  HeatGridAgent_LLM_Agent_Architecture_Report.html  M1_모델개발여정_발표자료.pptx  README.md  create_ppt.py  pyproject.toml
04_리서치/: 01_PreDist_데이터셋_요약.md  03_HeatGrid_추가데이터_정리.html
06_노트북/: 01_m1_data_check_and_label_policy.ipynb  01_predist_dataset_inspection.ipynb  02_m1_classification_preprocessing.ipynb  02_predist_event_visualization.ipynb  03_m1_minimal_baseline_training.ipynb  04_m1_label_window_validation.ipynb  05_m1_conservative_training.ipynb  06_m1_positive_expansion_training.ipynb  07_m1_normal_vs_fault_event_training.ipynb  08_m1_pre_event_feature_expansion_threshold_validation.ipynb  09_m1_pre_event_compact_feature_set_validation.ipynb  10_m1_compact13_leakage_safe_validation.ipynb  11_m1_hard_normal_false_positive_audit.ipynb  12_m1_hard_normal_timeseries_review.ipynb  13_m1_expanded_training_fixed_eval_validation.ipynb  14_m1_expanded_compact13_error_audit.ipynb  15_m1_normal_vs_fault_transition_validation.ipynb  16_m1_event_taxonomy_4class_design.ipynb  17_m1_4class_binary_gate_validation.ipynb  18_m1_normal_vs_event_gate_policy_iteration.ipynb  19_m1_event_type_one_vs_normal_gate_validation.ipynb  (+13 more)
07_데이터산출물/: 01_M1_데이터_재계산_보고서.md  (+239 more)
11_신운영서비스/backend/: Dockerfile  pyproject.toml
11_신운영서비스/backend/heatgrid_ops/: anomaly.py  config.py  db.py  handoff_cards.py  models_registry.py  scheduler.py
11_신운영서비스/backend/heatgrid_ops/agent/: card_graph.py  ops_graph.py  prompts.py
11_신운영서비스/backend/heatgrid_ops/api/: actions.py  app.py  ingest.py  queries.py  ws.py
11_신운영서비스/backend/heatgrid_ops/llm/: budget.py  cache.py  client.py  templates.py
11_신운영서비스/backend/heatgrid_ops/pipeline/: priority.py  state_card.py
11_신운영서비스/backend/heatgrid_ops/rag/: chunker.py  embedder.py  ingest.py
11_신운영서비스/backend/heatgrid_ops/replay/: extract.py  publisher.py  scenarios.py
11_신운영서비스/backend/heatgrid_ops/tools/: documents.py  judgment.py  lookup.py  similar_case.py
(+271 files in other folders)
