[project]
name = "heatgridagent"
version = "0.1.0"
description = "PreDist dataset inspection notebooks for HeatGridAgent"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "ipykernel>=7.0.0",
    "nbformat>=5.10.4",
    "nbclient>=0.10.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.3.0",
]
