[project]
name = "heatgridagent"
version = "0.1.0"
description = "PreDist dataset inspection notebooks for HeatGridAgent"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "ipykernel>=7.0.0",
    "nbformat>=5.10.4",
    "nbclient>=0.10.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "pydantic-settings>=2.7",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "openai>=1.60",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "websockets>=14",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "beautifulsoup4>=4.15.0",
    "pypdf>=5.0",
]
